--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,8 @@ url = { version = "2.5.4", features = ["serde"] }
 refinery = { version = "0.8.16", features = ["tokio-postgres"] }
 tokio-postgres = { version = "0.7.13", features = ["with-uuid-1"] }
 deadpool-postgres = "0.14.1"
-# we're using getrandom to be slightly more cryptographically secure uuids
-uuid = { version = "1.14.0", features = ["v7", "v4", "rng-getrandom"] }
+# we're using getrandom to have slightly more cryptographically secure uuids
+uuid = { version = "1.14.0", features = ["v7", "v4", "rng-getrandom", "serde"] }
 
 rsa = { version = "0.9.7", features = ["pem", "sha2"] }
 ed25519-dalek = {version = "2.1.1", features = ["pkcs8", "rand_core", "serde", "pem"]}
