--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,8 @@
 instance_domain="testing1.ivytime.gay"
 bind_address="127.0.0.1"
 port=8020
+open_signups=false
+allow_applications=false
 
 pg_user="ivy"
 pg_password="password"
