--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ reqwest = { version = "0.12.15", default-features = false, features = ["json", "
 httpdate = "1.0.3"
 argon2 = "0.5.3"
 codes-iso-639 = "0.1.5"
+actix-cors = "0.7.1"
