--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,5 @@ argon2 = "0.5.3"
 codes-iso-639 = "0.1.5"
 actix-cors = "0.7.1"
 actix-ws = "0.3.0"
-tokio = "1.45.0"
+tokio = { version = "1.45.1", features = ["full"] }
+futures-util = "0.3.31"
