--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,5 @@ actix-cors = "0.7.1"
 actix-ws = "0.3.0"
 tokio = { version = "1.45.1", features = ["full"] }
 futures-util = "0.3.31"
+const_format = "0.2.34"
+futures = "0.3.31"
