--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ serde_json = "1.0.139"
 url = { version = "2.5.4", features = ["serde"] }
 
 refinery = { version = "0.8.16", features = ["tokio-postgres"] }
-tokio-postgres = { version = "0.7.13", features = ["with-uuid-1"] }
+tokio-postgres = { version = "0.7.13", features = ["with-uuid-1", "with-serde_json-1"] }
 deadpool-postgres = "0.14.1"
 # we're using getrandom to have slightly more cryptographically secure uuids
 uuid = { version = "1.14.0", features = ["v7", "v4", "rng-getrandom", "serde"] }
@@ -33,4 +33,3 @@ actix-ws = "0.3.0"
 tokio = { version = "1.45.1", features = ["full"] }
 futures-util = "0.3.31"
 const_format = "0.2.34"
-futures = "0.3.31"
